# instadown

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
instadown/: Cargo.toml
src/: main.rs
src/core/: config.rs  mod.rs
src/downloader/: instagram.rs  mod.rs  utils.rs
src/ui/: app.rs  mod.rs  styles.rs  ui.rs
src/ui/components/: download.rs  exit_button.rs  history.rs  input.rs  mod.rs  tabs.rs
